handle bug fix